Login appearance edited

--- a/src/sample/Language.properties
+++ b/src/sample/Language.properties
@@ -4,3 +4,5 @@ passwordLabel=Password
 ExitButton=Exit
 loginButton=Login
 mainScreenTitleLabel=Meeting Scheduling System
+LanguageLabel=System Language
+LocationLabel=System Locale
