Add and Modify Appointment specific Error Messages done

--- a/src/sample/Language.properties
+++ b/src/sample/Language.properties
@@ -1,4 +1,4 @@
-loginError=Incorrect Username or Password
+loginError=Invalid Login
 usernameLabel=Username
 passwordLabel=Password
 ExitButton=Exit
